# gmail-llm-labeler

./: .env.local.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
docs/: CONFIGURATION.md
email_labeler/: __init__.py  config.py  database.py  email_processor.py  factory.py  gmail_utils.py  labeler.py  llm_service.py  metrics.py
email_labeler/pipeline/: README.md  __init__.py  base.py  cli.py  config.py  extract_stage.py  load_stage.py  orchestrator.py  sync_stage.py  transform_stage.py
examples/: example_config.yaml  pipeline_config_local.yaml
tests/: README.md  conftest.py  test_database.py  test_email_processor.py  test_factory.py  test_labeler.py  test_llm_service.py  test_pipeline_orchestrator.py  test_pipeline_stages.py
